# quatra-arkansas-firmware

./: .gitignore  README.md
cm5-bridge/: .gitignore  README.md  config.example.toml  requirements-dev.txt  requirements.txt
cm5-bridge/quatra_cm5_bridge/: __init__.py  __main__.py  bridge.py  config.py  uart_link.py
cm5-bridge/quatra_cm5_bridge/transports/: __init__.py  base.py  http.py  mqtt.py  stdout.py
cm5-bridge/systemd/: install.sh  quatra-cm5-bridge.service
cm5-bridge/tests/: conftest.py  fakes.py  test_bridge.py  test_config.py  test_stdout_transport.py  test_uart_link.py
components/quatra/: CMakeLists.txt  README.md  idf_component.yml
components/quatra/include/: quatra_config.h  quatra_et0.h  quatra_types.h  quatra_uart.h  quatra_zone.h
components/quatra/src/: quatra_et0.c  quatra_uart.c  quatra_zone.c
examples/: main.c
tests/: Makefile  test_common.h  test_et0.c  test_uart.c  test_zone.c
